SERVER-94191 Call 'validateN' in WindowStageBuilder for 'n' window functions (#26922)

GitOrigin-RevId: 0d78054719d495bd404aa5720e23fe6a05971ad6