src/mongo/db/exec/sbe/stages/window.cpp
@@ -534,6 +534,10 @@ value::SlotAccessor* WindowStage::getAccessor(CompileCtx& ctx, value::SlotId slo
 void WindowStage::setPartition(int id) {
     _windowIdRanges.clear();
     _windowIdRanges.resize(_windows.size(), std::make_pair(id, id - 1));
+
+    // The initializer codes may depend on buffered values in slot accessors. As such, we set
+    // accessors for the current document before running any of the initializer codes.
+    setCurrAccessors(id);
     for (size_t windowIdx = 0; windowIdx < _windows.size(); windowIdx++) {
         auto& windowAccessors = _outWindowAccessors[windowIdx];
         auto& windowInitCodes = _windowInitCodes[windowIdx];
@@ -566,7 +570,12 @@ void WindowStage::open(bool reOpen) {
 
     _currId = 0;
     freeRows();
-    setPartition(1);
+
+    // Set our initial partiton, and initialize '_windowIdRanges' accordingly such that we can
+    // estimate our memory usage after fetching the first row.
+    _nextPartitionId = 1;
+    _windowIdRanges.clear();
+    _windowIdRanges.resize(_windows.size(), std::make_pair(1, 0));
 }
 
 PlanState WindowStage::getNext() {
